termino do desenvolvimento do html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
   <div>
-    <img src="./primeira imagem.jpg" alt="imagem do criador da página de links , Gustavo Lima", >
-    <h1>Gustavo Lima</h1>
+     <img src="./primeira imagem.jpg" alt="imagem do criador da página de links , Gustavo Lima", >
+     <h1>Gustavo Lima</h1>
+     <p>São Paulo , Brasil</p>
+
+     <p>"desenvolvedor viciado em jogos"</p>
+     <a href="https://github.com/gustavolima012a">GitHub</a>
+     <a href="https://www.instagram.com/gustavo.wxr?igsh=MTc0NWFxOTBkNzM0aw==">Instagram</a>
   </div>
 </body>
 </html>
