desenvolvimento do CSS concluido

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div>
      <img src="./primeira imagem.jpg" alt="imagem do criador da página de links , Gustavo Lima", >
      <h1>Gustavo Lima</h1>
-     <p>São Paulo , Brasil</p>
+     <strong>São Paulo , Brasil</strong>
 
      <p>"desenvolvedor viciado em jogos"</p>
      <a href="https://github.com/gustavolima012a">GitHub</a>
