adicionado o atributo para as ancoras. projeto finalizado

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
      <strong>São Paulo , Brasil</strong>
 
      <p>"desenvolvedor viciado em jogos"</p>
-     <a href="https://github.com/gustavolima012a">GitHub</a>
-     <a href="https://www.instagram.com/gustavo.wxr?igsh=MTc0NWFxOTBkNzM0aw==">Instagram</a>
+     <a href="https://github.com/gustavolima012a" target="_blanck">GitHub</a>
+     <a href="https://www.instagram.com/gustavo.wxr?igsh=MTc0NWFxOTBkNzM0aw==" target="_blanck">Instagram</a>
   </div>
 </body>
 </html>
